# fraud_detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_eda_and_modeling.ipynb
reports/: metrics.csv
scripts/: download_data.py
src/fraud_detection/: config.py  data.py  evaluate.py  features.py  predict.py  train.py
tests/: test_data.py  test_evaluate.py  test_features.py
