[project]
name = "fraud-detection"
version = "0.1.0"
description = "Credit card fraud detection - classic ML classification with severe class imbalance"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
